# myco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  myco.bat  pyproject.toml  pytest.ini  requirements.txt  start-myco-cuda.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  testing_report.md
.github/workflows/: ci.yml
.myco/: annotations.json
cli/: __init__.py  main.py
cli/agent/: __init__.py  approval.py  architecture.py  architecture_map.py  certainty.py  core.py  error_recovery.py  impact_estimator.py  project_context.py  quality.py  self_improvement.py  session_memory.py  tools.py  verification.py
cli/commands/: agent.py  chat.py  interactive.py  model.py  server.py  unified.py  verify.py
cli/core/: __init__.py  model_manager.py  server_manager.py
cli/ui/: __init__.py  approval_prompt.py  conversation_memory.py  entropy_status_bar.py  entropy_visualizer.py  status_display.py  tension_map.py  trajectory_display.py  verification_display.py
cli/utils/: chat_history.py  config.py  logging.py  token_counter.py
examples/: README.md
myco/: __init__.py  attractor.py  cli.py  delta.py  energy.py  entropy.py  gate.py  git_tools.py  model_provider.py  rank.py  session_log.py  stigma.py  tensegrity.py  trajectory.py  validate.py  world.py
myco/tests/: __init__.py  test_agent_integration.py  test_attractor.py  test_cli_integration.py  test_delta.py  test_entropy.py  test_gate.py  test_git_tools.py  test_model_provider.py  test_session_log.py  test_stigma.py  (+5 more)
utils/: formatters.py
(+7 files in other folders)
